# widget

./: .gitignore  AGENTS.md  Makefile  README.md  codex-edits.json  codex-raw.txt  pyproject.toml  repo-context.txt
.github/: CODEOWNERS
.github/actions/conventional-release-notes/: action.yml
.github/codex/prompts/: issue-implement.md  issue-plan.md  pr-follow-up.md
.github/workflows/: build.yml  ci.yml  issue-implementation.yml  issue-planning.yml  issues.yml  pr-follow-up.yml  prerelease.yml  release.yml  version.yml
src/widget/: __init__.py  app.py  cli.py  models.py  store.py
tests/: test_widgets.py
